--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ body {font-size:16px;}
     </div>
         
     <div class="w3-half">
-      <ul class="w3-ul w3-light-grey w3-center">
+      <ol class="w3-ul w3-light-grey w3-center">
         <li class="w3-red w3-xlarge w3-padding-32">Pro</li>
         <li class="w3-padding-16">Floorplanning</li>
         <li class="w3-padding-16">50 hours support</li>
@@ -173,7 +173,7 @@ body {font-size:16px;}
         <li class="w3-light-grey w3-padding-24">
           <button class="w3-button w3-red w3-padding-large w3-hover-black">Sign Up</button>
         </li>
-      </ul>
+      </ol>
     </div>
   </div>
   
