--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ body {font-size:16px;}
     </div>
         
     <div class="w3-half">
-      <ol class="w3-ul w3-light-grey w3-center">
+      <ol class="w3-ol w3-light-grey w3-center">
         <li class="w3-red w3-xlarge w3-padding-32">Pro</li>
         <li class="w3-padding-16">Floorplanning</li>
         <li class="w3-padding-16">50 hours support</li>
